fixing spacing

--- a/Challenge2/christmas.css
+++ b/Challenge2/christmas.css
@@ -42,26 +42,6 @@ body{
   a:hover, a:active {
       background-color: rgb(32, 88, 10);
   }
-  
-  /* .flex-container {
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    max-width: 100%;
-    justify-content: center;
-    margin-left: 30%; 
-} */
-
-/* .flex-container > div{
-  display: flex; 
-  align-items: center;
-  justify-content: center;
-  padding: 0 50px;
-  height: 100%;
-  text-align: center;
-  color:rgb(206, 193, 79);
-  border-radius: 11px;
-}  */
 
   /************************************** snowfall css **************************************/
   .snowflake {
@@ -90,7 +70,6 @@ body{
     text-align: center;
     font-size: 60px;
     margin: 5px;
-    /* font-family:'Chewy'; */
     font-family: 'Mountains of Christmas';
     color: white;
   }
@@ -107,7 +86,7 @@ body{
   }
   .box{
      font-family:'Verdana, Geneva, sans-serif' !important;
-      margin:0 5px;
+      margin: 0 5px;
       padding: 10px;
       position: relative;
       /*float: left;*/
@@ -116,7 +95,7 @@ body{
       font-size: 60px;
       line-height: 86px;
       border-radius: 4px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+      box-shadow: 0 2px 3px rgb(255, 254, 254);
       color:#ffffff;
       background: rgb(32, 88, 10); 
   
@@ -137,7 +116,8 @@ body{
   .time-content {
       width: 80%;
       text-align: center;
-      margin: 0 auto;
+      /* margin: 0 auto; */
+      margin: 35px 70px 50px 90px;
   }
   .time-content p {
       width: calc(97%/4);
